--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,7 +6,7 @@ steps:
     args: [-c, 'pip install -r requirements.txt', '&&', 'pytest']
     dir: 'functions/id/get'
   - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['functions', 'deploy', 'user_handler', '--trigger-http', '--runtime', 'python37', '--entry-point', 'user_handler', '--allow-unauthenticated']
+    args: ['functions', 'deploy', 'user_handler', '--trigger-http', '--runtime', 'python37', '--allow-unauthenticated']
     dir: 'functions/id/get'
 
   - name: 'docker.io/library/python:3.7'
@@ -16,5 +16,5 @@ steps:
     args: [-c, 'pip install -r requirements.txt', '&&', 'pytest']
     dir: 'functions/list'
   - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['functions', 'deploy', 'users_handler', '--trigger-http', '--runtime', 'python37', '--entry-point', 'users_handler', '--allow-unauthenticated']
+    args: ['functions', 'deploy', 'users_handler', '--trigger-http', '--runtime', 'python37', '--allow-unauthenticated']
     dir: 'functions/list'
