--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,15 +6,15 @@ steps:
     args: [-c, 'pip install -r requirements.txt', '&&', 'pytest']
     dir: 'functions/id/get'
   - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['functions', 'deploy', 'user_handler', '--trigger-http', '--runtime', 'python37', '--allow-unauthenticated']
+    args: ['functions', 'deploy', 'user_handler', '--trigger-http', '--runtime', 'python37', '--region=europe-west1', '--allow-unauthenticated']
     dir: 'functions/id/get'
 
-  - name: 'docker.io/library/python:3.7'
-    entrypoint: /bin/sh
-    # Run pip install and pytest in the same build step
-    # (pip packages won't be preserved in future steps!)
-    args: [-c, 'pip install -r requirements.txt', '&&', 'pytest']
-    dir: 'functions/list'
-  - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['functions', 'deploy', 'users_handler', '--trigger-http', '--runtime', 'python37', '--allow-unauthenticated']
-    dir: 'functions/list'
+#  - name: 'docker.io/library/python:3.7'
+#    entrypoint: /bin/sh
+#    # Run pip install and pytest in the same build step
+#    # (pip packages won't be preserved in future steps!)
+#    args: [-c, 'pip install -r requirements.txt', '&&', 'pytest']
+#    dir: 'functions/list'
+#  - name: 'gcr.io/cloud-builders/gcloud'
+#    args: ['functions', 'deploy', 'users_handler', '--trigger-http', '--runtime', 'python37', '--region=europe-west1', '--allow-unauthenticated']
+#    dir: 'functions/list'
