--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,10 +2,15 @@ steps:
   - name: 'docker.io/library/python:3.7'
     entrypoint: /bin/sh
     args: [-c, 'pip install -r requirements.txt', '&&', 'pytest']
-    dir: 'functions'
+    dir: 'functions/id/get'
   - name: 'gcr.io/cloud-builders/gcloud'
     args: ['functions', 'deploy', 'user_handler', '--runtime=python37', '--trigger-http', '--allow-unauthenticated', '--region=europe-west1']
     dir: 'functions/id/get'
+
+  - name: 'docker.io/library/python:3.7'
+    entrypoint: /bin/sh
+    args: [-c, 'pip install -r requirements.txt', '&&', 'pytest']
+    dir: 'functions/all'
   - name: 'gcr.io/cloud-builders/gcloud'
     args: ['functions', 'deploy', 'users_handler', '--runtime=python37', '--trigger-http', '--allow-unauthenticated', '--region=europe-west1']
     dir: 'functions/all'
