--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -16,5 +16,5 @@ steps:
     args: [-c, 'pip install -r requirements.txt', '&&', 'pytest']
     dir: 'functions/all'
   - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['functions', 'deploy', 'users_handler', '--runtime=python37', '--trigger-http', '--region=europe=west1']
+    args: ['functions', 'deploy', 'users_handler', '--runtime=python37', '--trigger-http', '--region=europe-west1']
     dir: 'functions/all'
