--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -44,6 +44,26 @@ steps:
     # Run pip install and pytest in the same build step
     # (pip packages won't be preserved in future steps!)
     args: [-c, 'pip install -r requirements.txt', '&&', 'pytest']
+    dir: 'functions/id/originalvoices/get'
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args: ['functions', 'deploy', 'get-users-original-voices', '--runtime=python37', '--trigger-http', '--region=europe-west1', '--entry-point=get_users_original_voices']
+    dir: 'functions/id/originalvoices/get'
+
+  - name: 'docker.io/library/python:3.7'
+    entrypoint: /bin/sh
+    # Run pip install and pytest in the same build step
+    # (pip packages won't be preserved in future steps!)
+    args: [-c, 'pip install -r requirements.txt', '&&', 'pytest']
+    dir: 'functions/id/recordedvoices/get'
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args: ['functions', 'deploy', 'get-users-recorded-voices', '--runtime=python37', '--trigger-http', '--region=europe-west1', '--entry-point=get_users_recorded_voices']
+    dir: 'functions/id/recordedvoices/get'
+
+  - name: 'docker.io/library/python:3.7'
+    entrypoint: /bin/sh
+    # Run pip install and pytest in the same build step
+    # (pip packages won't be preserved in future steps!)
+    args: [-c, 'pip install -r requirements.txt', '&&', 'pytest']
     dir: 'functions/register'
   - name: 'gcr.io/cloud-builders/gcloud'
     args: ['functions', 'deploy', 'user_register', '--runtime=python37', '--trigger-http', '--region=europe-west1']
